# 2021-Regionals-Shared

utulsa/: zero_hour_linux.sh
utulsa/Templates/: BASIC Report Template (1).docx  Current Memo Template.docx  Executive Summary Template.docx  Linux_Host_Sheet.etherpad  Main_Whiteboard.etherpad  Policy Template.docx  Windows_Host_Sheet.etherpad
utulsa/multirouter/: README.md  pyproject.toml  requirements.txt
utulsa/multirouter/src/: run.py
utulsa/multirouter/src/multirouter/: host.py  iptables_manager.py  shell.py  ssh_handler.py
