[tool.poetry]
name = "multirouter"
version = "0.1.0"
description = ""
authors = ["Tabor Kvanicka <ttk164@utulsa.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
parallel-ssh = "^2.5.4"
colorama = "^0.4.4"
pyreadline = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
